fixed gap issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
  .sidebar {
   margin: 0;
   padding: 0;
-  width: 10%;
+  max-width: 200px;
   background-color: #a12e00;
   position: fixed;
   height: 100%;
@@ -92,7 +92,7 @@ h2 {
     border-color: #ff4800; 
     border-style: solid; 
     box-shadow: 2px 2px 2px 2px black;
-    width: 535px;
+    width: 635px;
     padding: 10px; 
     margin: 20px;
     background-color: #fc7945;
@@ -106,7 +106,7 @@ h2 {
     border-color: #ff4800; 
     border-style: solid; 
     box-shadow: 2px 2px 2px 2px black;
-    width: 735px;
+    width: 825px;
     padding: 10px; 
     margin: 20px;
     background-color: #fc7945;
